# voice_side_projects

./: README.md
ASR/asrclient/src/: AsrEngCln_c.h  AsrError.hpp  CriticalSection.hpp  DynBuffer.hpp  ExampleOfTLAsrEngCln.cpp  HighTimer.hpp  Makefile.am  Makefile.in  MonoWavFile.hpp  ObjectBase.hpp  PcmBuffer.hpp  Speech.hpp  SpeechFormatDef.h  TLAsrEngDef.h  TLAsrErr.h  TLAsrErrMess.h  TypeDef.h  asrclient_examplefor200.cpp  cch.h  ccy.h  jstring.hpp
TTS/: StdAfx.cpp  StdAfx.h  TLTtsErr.h  TLTtsErrMess.h  Tlttsdef.h  TtsLinkCs.hpp  cTTS.cpp  cTTS.dsp  cTTS.dsw  tlttsapi.h
nms-board/: nmsmacro.mak
nms-board/boardinf/: boardinf.c  makefile
nms-board/brd2brd/: brd2brd  brd2brd.c  makefile
nms-board/c6t2tivr/: c6t2tivr  c6t2tivr.c  makefile
nms-board/callcntr/: callcntr  callcntr.c  makefile
nms-board/clockdemo/: clockdemo  clockdemo.c  clockresource.c  clockresource.h  makefile  priority.txt
nms-board/cnfinfo/: cnfinfo.c  makefile
nms-board/cnfjoin/: cnfjoin  cnfjoin.c  makefile
nms-board/csplayrc/: csplayrc  csplayrc.c  makefile
nms-board/ctademo/: ctademo.c  ctademo.h  makefile
nms-board/ctatest/: ctatest.c  makefile
nms-board/dectrace/: decisdn.c  dectrace.c  dectrace.h  makefile
nms-board/evtsvc/: evtapi.c  evtapi.def  evtbnd.c  evtcmd.c  evtdef.h  evtmgr.def  evtspi.c  evtspi.h  evtsys.h  makefile
nms-board/evttest/: evttest.c  makefile
nms-board/hccsvc/: hccLineObject.cpp  hccLineObject.h  hccbnd.cpp  hccinit.c  hccmgr.def  hccsys.h  hostTcp.cpp  hostTcp.h  makefile  nccsys.h  wnkHostTcp.cpp  wnkHostTcp.h
nms-board/hostp2p/: hostp2p  (+2 more)
(+236 files in other folders)
